add working ingredientArray loop for adding x item

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container">
+<class="container">
   <div class="row ingredient">
     <div class="ingredient__item col-md-2">
       <div class="ingredient__item_header"></div>
       <div class="ingredient__item_image"><img src="./Shard_of_Farosh's_Horn.png"></div>
       <div class="ingredient__item_name ingredient__item_name--white text-center">
-        <p><span class="ingredient__item_name--red">S</span>hard of Farosh's Horn</p>
+        <p id="ingredient1"><span class="ingredient__item_name--red">S</span>hard of Farosh's Horn</p>
       </div>
       <div class="triforce">
         <div class="triangle"></div>
@@ -23,7 +23,7 @@
       <div class="ingredient__item_header"></div>
       <div class="ingredient__item_image"><img src="./Tabantha_Wheat.png"></div>
       <div class="ingredient__item_name ingredient__item_name--white text-center">
-        <p><span class="ingredient__item_name--red">T</span>abantha Wheat</p>
+        <p id="ingredient2"> <span class="ingredient__item_name--red">T</span>abantha Wheat</p>
       </div>
       <div class="triforce">
         <div class="triangle"></div>
@@ -61,6 +61,8 @@
     </div>
 
   </div>
-
+<div id="output"></div>
   </body>
 </html>
+
+
