--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
 <body>
 <class="container">
   <div class="row ingredient">
-    <div class="ingredient__item col-md-2">
+    <div id="ingredient1" class="ingredient__item col-md-2">
       <div class="ingredient__item_header"></div>
       <div class="ingredient__item_image"><img src="./Shard_of_Farosh's_Horn.png"></div>
       <div class="ingredient__item_name ingredient__item_name--white text-center">
-        <p id="ingredient1"><span class="ingredient__item_name--red">S</span>hard of Farosh's Horn</p>
+        <p><span class="ingredient__item_name--red">S</span>hard of Farosh's Horn</p>
       </div>
       <div class="triforce">
         <div class="triangle"></div>
@@ -33,7 +33,7 @@
       <div class="ingredient__item_header"></div>
       <div class="ingredient__item_image"> <img src="./Raw_Gourmet_Meat.png"></div>
       <div class="ingredient__item_name ingredient__item_name--white text-center">
-        <p><span class="ingredient__item_name--red">R</span>aw Gourmet Meat</p>
+        <p id="ingredient3"><span class="ingredient__item_name--red">R</span>aw Gourmet Meat</p>
       </div>
       <div class="triforce">
         <div class="triangle"></div>
@@ -43,7 +43,7 @@
       <div class="ingredient__item_header"></div>
       <div class="ingredient__item_image"><img src="./Raw_Bird_Drumstick.png"></div>
       <div class="ingredient__item_name ingredient__item_name--white text-center">
-        <p> <span class="ingredient__item_name--red">R</span>aw Bird Drumstick</p>
+        <p id="ingredient4"> <span class="ingredient__item_name--red">R</span>aw Bird Drumstick</p>
       </div>
       <div class="triforce">
         <div class="triangle"></div>
@@ -53,7 +53,7 @@
       <div class="ingredient__item_header"></div>
       <div class="ingredient__item_image"><img src="./apple.png"></div>
       <div class="ingredient__item_name ingredient__item_name--white text-center">
-        <p><span class="ingredient__item_name--red">A</span>pple</p>
+        <p id="ingredient5"><span class="ingredient__item_name--red">A</span>pple</p>
       </div>
       <div class="triforce">
         <div class="triangle"></div>
