add styling, fix dynamic adding to DOM

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,12 @@
 <body>
 
   <div class="container">
-
       <div id="output"> </div>
   </div>
-  
+  <div id="output2__header" class="grow">Cooking pot is full!</div>
+  <div id="output2"> </div>
+  <div id="output2__cards" class="row"> </div>
+  <div id="output2__reset" class="grow--big"> <img src="assets/images/SheikahSymbol.png"> </div>
 </body>
 
 </html>
