add recipe images via urls

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 <body>
 
   <div class="container">
-      <div id="output"> </div>
+    <div id="output"> </div>
+    <div><button class="btn btn-dark" id="mix">Mix</button></div>
   </div>
   <div id="output2__header" class="grow">Cooking pot is full!</div>
   <div id="output2"> </div>
