--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
   </ul>
   <div id="output2__header" class="grow">Cooking pot is full!</div>
   <div id="output2"> </div>
-  <div><button class="btn btn-dark" id="mix">Mix</button></div>
+  <div><button class="btn btn-dark" id="mix">Cook</button></div>
   <div id="output2__cards" class="row"> </div>
-  <div id="output2__reset" class="grow--big"> <img src="assets/images/SheikahSymbol.png"> </div>
+  <div id="output2__reset" class="grow--big"> <img src="assets/images/trash.png"> </div>
   </div>
 
 
