--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="output2"> </div>
   <div><button class="btn btn-dark" id="mix">Cook</button></div>
   <div id="output2__cards" class="row"> </div>
-  <div id="output2__reset" class="grow--big"> <img src="/BOTW-Recipebook/assets/images/trash.png"> </div>
+  <div id="output2__reset" class="grow--big"> <img src="assets/images/trash.png"> </div>
   </div>
 
 
@@ -73,6 +73,6 @@
     </section>
     <div id="margin">
     </div>
-<script type="text/javascript" src="/BOTW-Recipebook/bundle.js"></script></body>
+<script type="text/javascript" src="bundle.js"></script></body>
 
 </html>
