--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <ul>
-    <li><a class="active" href="#home">Home</a></li>
+    <li><a class="active" href="#home">Home.</a></li>
     <li><a href="#recipes">Recipes</a></li>
     <li style="float:right"><a href="#about">About</a></li>
   </ul>
